# OO-viikko-koodit

./: .gitignore  README.md
Week1/ekaCPP_project/: CMakeLists.txt  main.cpp
Week2/: CMakeLists.txt  game.cpp  game.h  main.cpp
Week3/: CMakeLists.txt  chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
Week4/: CMakeLists.txt  asiakas.cpp  asiakas.h  luottotili.cpp  luottotili.h  main.cpp  pankkitili.cpp  pankkitili.h
Week5/: CMakeLists.txt  main.cpp  notifikaattori.cpp  notifikaattori.h  seuraaja.cpp  seuraaja.h
Week6/: CMakeLists.txt  main.cpp  student.cpp  student.h
Week7/osa1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Week7/osa2/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
